--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "opusscript": "^0.0.8",
     "yt-channel-info": "^3.0.4"
   },  
+  "version": "18.2.0",
   "engines":{
     "node":"18.2.0"
   }
